Interactive Resume Portfolio [Updated the Experiences tooltip text]

--- a/weekend-challenge/web dev: resume portfolio/style.css
+++ b/weekend-challenge/web dev: resume portfolio/style.css
@@ -189,7 +189,7 @@ img {
 #projects:hover::after
 {
     background-color: white;
-    content: "Click the caret for more information about each role.";
+    content: "Click the caret for more information.";
     color: black;
     padding: 5px;
     border: 1px solid black;
