--- a/weekend-challenge/weather-forecast-app/style.css
+++ b/weekend-challenge/weather-forecast-app/style.css
@@ -20,8 +20,8 @@ body {
 }
 
 #location {
-    width: 100%; /* Full width of the search box */
-    padding: 10px 40px; /* Add padding for input and space for the icon */
+    width: 87%; /* Full width of the search box */
+    padding: 10px 0 10px 40px; /* Add padding for input and space for the icon */
     border: 1px solid #ccc; /* Border style */
     border-radius: 4px; /* Rounded corners */
     font-size: 16px; /* Increase font size for better visibility */
@@ -102,4 +102,7 @@ body {
 #error-message {
     color: red; /* Color for error messages */
     margin-top: 20px;
+}
+h1{
+    text-align: center;
 }
