--- a/ruby/homework/blog/app/views/categories/show.html.erb
+++ b/ruby/homework/blog/app/views/categories/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Categories#show</h1>
-<p>Find me in app/views/categories/show.html.erb</p>
+<h1><%= @category.name %></h1>
+
+<p><em><%= @category.description %></em></p>
+
+<p>Created by: <%= @category.user.name %></p>
+
+<%= link_to 'Edit Category', edit_category_path(@category), class: 'button' %>  <!-- Edit button -->
+
+<%= link_to 'Delete Category', category_path(@category), method: :delete, data: { confirm: 'Are you sure you want to delete this category?' }, class: 'button' %>
+
+<%= link_to 'Back to Categories', categories_path %>
