--- a/ruby/homework/blog/app/views/layouts/application.html.erb
+++ b/ruby/homework/blog/app/views/layouts/application.html.erb
@@ -18,6 +18,17 @@
   </head>
 
   <body>
+    <!-- Add Devise links for authentication -->
+    <nav>
+      <% if user_signed_in? %>
+        <p>Welcome, <%= current_user.email %>!</p>
+        <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to 'Sign In', new_user_session_path %> |
+        <%= link_to 'Sign Up', new_user_registration_path %>
+      <% end %>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
