--- a/ruby/classwork/devisemailer/app/views/layouts/_nav.html.erb
+++ b/ruby/classwork/devisemailer/app/views/layouts/_nav.html.erb
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Sign Up", new_user_registration_path%></li>
         <li><%= link_to "Sign In", new_user_session_path%></li>
-        <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+        <li><%= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Dropdown <span class="caret"></span>
