--- a/ruby/classwork/devisemailer/app/views/layouts/_foot.html.erb
+++ b/ruby/classwork/devisemailer/app/views/layouts/_foot.html.erb
@@ -1,32 +1,54 @@
-<footer class="footer-distributed">
-  <div class="footer-left">
-    <h3>Company<span>logo</span></h3>
-    
-    <p class="footer-links">
-      <a href="#">Home</a> ·
-      <a href="#">Blog</a> ·
-      <a href="#">Pricing</a> ·
-      <a href="#">About</a> ·
-      <a href="#">Faq</a> ·
-      <a href="#">Contact</a>
-    </p>
-    
-    <p class="footer-company-name">Company Name &copy; 2015</p>
-    
-    <div class="footer-icons">
+<% if current_user %>
+  <footer class="footer-distributed">
+    <div class="footer-right">
       <a href="#"><i class="fa-brands fa-facebook"></i></a>
       <a href="#"><i class="fa-brands fa-twitter"></i></a>
       <a href="#"><i class="fa-brands fa-linkedin"></i></a>
       <a href="#"><i class="fa-brands fa-github"></i></a>
     </div>
-  </div>
-
-  <div class="footer-right">
-    <p>Contact Us</p>
-    <form action="#" method="post">
-      <input type="text" name="email" placeholder="Email" />
-      <textarea name="message" placeholder="Message"></textarea>
-      <button>Send</button>
-    </form>
-  </div>
-</footer>
+    
+    <div class="footer-left">
+      <p class="footer-links">
+        ·
+        <a class="page-scroll" href="#portfolio">Contact Us</a>
+        ·
+        <a class="page-scroll" href="#services">About Us</a>
+        ·
+      </p>
+      <p></p>
+    </div>
+  </footer>
+<% else %>
+  <footer class="footer-distributed">
+    <div class="footer-left">
+      <h3>Company<span>logo</span></h3>
+      
+      <p class="footer-links">
+        <a href="#">Home</a> ·
+        <a href="#">Blog</a> ·
+        <a href="#">Pricing</a> ·
+        <a href="#">About</a> ·
+        <a href="#">Faq</a> ·
+        <a href="#">Contact</a>
+      </p>
+      
+      <p class="footer-company-name">Company Name &copy; 2015</p>
+      
+      <div class="footer-icons">
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="#"><i class="fa-brands fa-github"></i></a>
+      </div>
+    </div>
+    
+    <div class="footer-right">
+      <p>Contact Us</p>
+      <form action="#" method="post">
+        <input type="text" name="email" placeholder="Email" />
+        <textarea name="message" placeholder="Message"></textarea>
+        <button>Send</button>
+      </form>
+    </div>
+  </footer>
+<% end %>
