--- a/ruby/classwork/devisemailer/app/views/layouts/_nav.html.erb
+++ b/ruby/classwork/devisemailer/app/views/layouts/_nav.html.erb
@@ -8,12 +8,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <%= link_to "Nadia's Articles", root_path, class: 'navbar-brand' %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "Contact Us", pages_contact_path%></li>
+        <li><%= link_to "About Us", pages_about_path%></li>
         <li><%= link_to "Sign Up", new_user_registration_path%></li>
         <li><%= link_to "Sign In", new_user_session_path%></li>
         <li><%= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
