--- a/ruby/classwork/blog/app/views/articles/_form.html.erb
+++ b/ruby/classwork/blog/app/views/articles/_form.html.erb
@@ -14,13 +14,17 @@
         <div><%= message %></div>
       <% end %>
     </div>
-  
+    <div>
+      <%= form.label :category_id, "Category" %><br>
+      <%= form.select :category_id, Category.all.collect { |category| [category.name, category.id] }, { prompt: "Select a category" } %>
+    </div>
+
     <div>
       <%= form.submit %>
     </div>
     <div>
-  <%= form.label :status %><br>
-  <%= form.select :status, Visible::VALID_STATUSES, selected: article.status || 'public' %>
+      <%= form.label :status %><br>
+      <%= form.select :status, Visible::VALID_STATUSES, selected: article.status || 'public' %>
 </div>
 
   <% end %>
