--- a/ruby/classwork/blog/app/views/categories/index.html.erb
+++ b/ruby/classwork/blog/app/views/categories/index.html.erb
@@ -1,9 +1,9 @@
-<h1>All Categories</h1>
+<h1>Categories</h1>
+
 <ul>
   <% @categories.each do |category| %>
     <li>
-      <%= link_to category.name, category_path(category) %>
+    <%= link_to "#{category.name} - #{category.articles.count}", category %>
     </li>
   <% end %>
 </ul>
-<%= link_to "New Category", new_category_path %>
