Initial Styling w/o Bootstrap

--- a/ruby/classwork/blog/app/views/categories/index.html.erb
+++ b/ruby/classwork/blog/app/views/categories/index.html.erb
@@ -1,9 +1,16 @@
 <h1>Categories</h1>
 
-<ul>
+<ul class="list-group">
   <% @categories.each do |category| %>
-    <li>
-    <%= link_to "#{category.name} - #{category.articles.count}", category %>
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+      <%= link_to "#{category.name}", category %>
+      <span class="badge bg-primary rounded-pill">
+        <%= category.articles.count %>
+      </span>
     </li>
   <% end %>
 </ul>
+
+
+
+
