--- a/ruby/classwork/devisemailer/app/views/layouts/_nav.html.erb
+++ b/ruby/classwork/devisemailer/app/views/layouts/_nav.html.erb
@@ -34,4 +34,6 @@
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </nav>
