--- a/ruby/classwork/devisemailer/app/views/devise/registrations/new.html.erb
+++ b/ruby/classwork/devisemailer/app/views/devise/registrations/new.html.erb
@@ -2,8 +2,19 @@
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
-
   <div class="form-inputs">
+  <%= f.input :username,
+  required: true, autofocus: true%>
+<%= f.input :firstname,
+  required: false,
+  input_html: { autocomplete: "email" }%> 
+<%= f.input :lastname,
+  required: false,
+  input_html: { autocomplete: "email" }%>     
+  <%= f.input :email,
+  required: false,
+  autofocus: false,
+  input_html: { autocomplete: "email" }%> 
     <%= f.input :email,
                 required: true,
                 autofocus: true,
