--- a/ruby/classwork/devisemailer/app/views/layouts/_nav.html.erb
+++ b/ruby/classwork/devisemailer/app/views/layouts/_nav.html.erb
@@ -14,24 +14,26 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Contact Us", pages_contact_path%></li>
+      <li><%= link_to "Contact Us", pages_contact_path%></li>
         <li><%= link_to "About Us", pages_about_path%></li>
+        <% if !current_user %>
         <li><%= link_to "Sign Up", new_user_registration_path%></li>
         <li><%= link_to "Sign In", new_user_session_path%></li>
-        <li><%= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
+        <% else %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            Dropdown <span class="caret"></span>
+            <%=current_user.email%> <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><%= link_to "Edit My Profile", edit_user_registration_path%></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><%= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
           </ul>
         </li>
       </ul>
+      <% end%>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
