Navigation, Container, Footer, Font Awesome

--- a/ruby/classwork/rorudemy/app/assets/stylesheets/application.css.scss
+++ b/ruby/classwork/rorudemy/app/assets/stylesheets/application.css.scss
@@ -12,3 +12,8 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+/* Don't need this one:
+@import "font-awesome-sprockets";
+*/
+@import "font-awesome";
