--- a/ruby/classwork/rorudemy/app/views/layouts/application.html.erb
+++ b/ruby/classwork/rorudemy/app/views/layouts/application.html.erb
@@ -18,11 +18,15 @@
     <link rel="apple-touch-icon" href="/icon.png">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
-    <%= stylesheet_link_tag "application" , "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
+  <%= render 'layouts/nav' %>
+  <div class='container'>
     <%= yield %>
+  </div>
+    <%= render 'layouts/foot' %>
   </body>
 </html>
