--- a/ruby/classwork/rorudemy/app/views/layouts/_nav.html.erb
+++ b/ruby/classwork/rorudemy/app/views/layouts/_nav.html.erb
@@ -18,7 +18,10 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li><%= link_to "Sign Up", new_user_registration_path %></li>
+        <li><%= link_to "Sign in", new_user_session_path %></li>
+        <!-- Link does not work -->
+        <li><%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Dropdown <span class="caret"></span>
