--- a/ruby/classwork/rorudemy/app/views/layouts/application.html.erb
+++ b/ruby/classwork/rorudemy/app/views/layouts/application.html.erb
@@ -19,11 +19,13 @@
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag  "turbo" ,type: "module" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
   <%= render 'layouts/nav' %>
+  <%= bootstrap_flash %>
   <div class='container'>
     <%= yield %>
   </div>
