--- a/ruby/classwork/rorudemy/app/views/devise/registrations/edit.html.erb
+++ b/ruby/classwork/rorudemy/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,10 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :username, required: true, autofocus: true%>
+    <%= f.input :email, required: true %>
+    <%= f.input :firstname, required: false %>
+    <%= f.input :lastname, required: false %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
