--- a/ruby/classwork/rorudemy/app/views/layouts/_nav.html.erb
+++ b/ruby/classwork/rorudemy/app/views/layouts/_nav.html.erb
@@ -20,23 +20,25 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Contact Us", pages_contact_path %></li>
         <li><%= link_to "About us", pages_about_path %></li>
+        <% if !current_user %>
         <li><%= link_to "Sign Up", new_user_registration_path %></li>
         <li><%= link_to "Sign in", new_user_session_path %></li>
-        <!-- Link does not work -->
-        <li><%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %></li>
+        
+        <% else %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            Dropdown <span class="caret"></span>
+            <%= current_user.username%> <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %></li>
           </ul>
         </li>
       </ul>
+      <% end %>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
