--- a/ruby/classwork/rorudemy/app/views/pages/index.html.erb
+++ b/ruby/classwork/rorudemy/app/views/pages/index.html.erb
@@ -125,8 +125,12 @@
         </div>
         <!-- Side Widget Well -->
         <div class="well">
-            <h4>Side Widget Well</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
+            <h4>Recent Articles</h4>
+            <% @articles.each do |article| %>
+                <strong><%= link_to article.title, article %></strong>
+                <p><%= truncate(article.body) %></p>
+            <% end %>
+            
         </div>
     </div>
 </div>
