--- a/ruby/classwork/rorudemy/app/views/articles/_article.html.erb
+++ b/ruby/classwork/rorudemy/app/views/articles/_article.html.erb
@@ -1,4 +1,9 @@
 <div id="<%= dom_id article %>">
+
+  <p>
+    <strong>Created By:</strong>
+    <%= article.user.username %>
+  </p>
   <p>
     <strong>Title:</strong>
     <%= article.title %>
