Updating View, Ruby on Rails a Beginners Guide Completed

--- a/ruby/classwork/rorudemy/app/views/articles/index.html.erb
+++ b/ruby/classwork/rorudemy/app/views/articles/index.html.erb
@@ -1,16 +1,40 @@
-<p style="color: green"><%= notice %></p>
-
-<% content_for :title, "Articles" %>
-
-<h1>Articles</h1>
-
-<div id="articles">
-  <% @articles.each do |article| %>
-    <%= render article %>
-    <p>
-      <%= link_to "Show this article", article %>
-    </p>
-  <% end %>
+<div class="row">
+  <!-- Blog article Content Column -->
+  <div class="col-lg-8">
+    <% @articles.each do |article| %>
+      <!-- Blog article -->
+      <!-- Title -->
+      <h4 style="font-size: 45.5px;">
+        <%= link_to article.title, article %>
+      </h4>
+      
+      <!-- Date/Time -->
+      <p><span class="glyphicon glyphicon-time"></span></p>
+      
+      <!-- Author -->
+      <p>
+        Article By: <strong><%= article.user.username %></strong>
+      </p>
+      <hr>
+      
+      <!-- article Comments -->
+      <!-- Comment -->
+    <% end %>
+    
+    <%= link_to "New article", new_article_path, class: "btn btn-default btn-xs" %>
+  </div>
+  
+  <!-- Blog Sidebar Widgets Column -->
+  <div class="col-md-4">
+    <div class="well">
+      <h4>Recent articles</h4>
+      <% @last_four.each do |article| %>
+        Created by: <%= article.user.username %><br />
+        <strong><%= link_to article.title, article %></strong>
+        <p><%= truncate(article.body) %></p>
+      <% end %>
+    </div>
+  </div>
 </div>
-
-<%= link_to "New article", new_article_path %>
+<%= will_paginate @articles %>
+<br>
