--- a/ruby/classwork/railsfriends/app/views/home/_header.html.erb
+++ b/ruby/classwork/railsfriends/app/views/home/_header.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <%= link_to "Friend App", root_path, class: "navbar-brand" %>
+  <%= link_to "Friend App", root_path, class: "navbar-brand" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,14 +7,30 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-      <%= link_to "About Us", home_about_path, class: "nav-link" %>
+        <%= link_to "About Us", home_about_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-      <%= link_to "Friends", friends_path, class: "nav-link" %>
+        <%= link_to "Friends", friends_path, class: "nav-link" %>
+      </li>
+      <% if user_signed_in? %>
+      <li class="nav-item">
+        <%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
       </li>
       <li class="nav-item">
-      <%= link_to "Add Friend", new_friend_path, class: "nav-link" %>
+        <%= link_to "Edit Profile", edit_user_registration_path, class: "nav-link" %>
       </li>
+      <li class="nav-item">
+        <%= link_to "Add Friend", new_friend_path, class: "nav-link" %>
+      </li>
+      <% else %>
+      <li class="nav-item">
+        <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
+      </li>
+       <% end %>
+      
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
