--- a/ruby/classwork/railsfriends/app/views/friends/index.html.erb
+++ b/ruby/classwork/railsfriends/app/views/friends/index.html.erb
@@ -18,7 +18,7 @@
         <% if friend.user == current_user %>
         <tr>
           <td>
-<%= link_to friend.first_name + ' ' + friend.last_name, friend %>
+<%= link_to "#{friend.first_name} #{friend.last_name}", friend %>
 
 
           </td>
@@ -32,7 +32,7 @@
           
           
           <td><%= link_to 'Delete', friend, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger btn-sm" %></td>
-          
+
         </tr>
         <% end %>
       <% end %>
