--- a/ruby/classwork/blog/app/views/articles/new.html.erb
+++ b/ruby/classwork/blog/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<!-- display any error messages for Article Title & Body-->
-<h1>New Article</h1>
-
+<div class = "container">
+<h1>Create New Article</h1>
+</div>
 <%= render "form", article: @article %>
