--- a/ruby/classwork/blog/app/views/categories/new.html.erb
+++ b/ruby/classwork/blog/app/views/categories/new.html.erb
@@ -1,4 +1,5 @@
-<!-- display any error messages for Category Name -->
+<div class= "container">
 <h1>New Category</h1>
 
 <%= render "form", category: @category %> <!-- Create --> 
+</div>
