--- a/ruby/classwork/blog/app/views/comments/_form.html.erb
+++ b/ruby/classwork/blog/app/views/comments/_form.html.erb
@@ -1,18 +1,25 @@
 <%= form_with model: [ article, article.comments.build ] do |form| %>
-    <p>
-      <%= form.label :commenter %><br>
-      <%= form.text_field :commenter %>
-    </p>
-    <p>
-      <%= form.label :body %><br>
-      <%= form.textarea :body %>
-    </p>
-    <p>
-      <%= form.submit %>
-    </p>
-    <p>
-  <%= form.label :status %><br>
-  <%= form.select :status, Visible::VALID_STATUSES, selected: 'public' %>
-</p>
-  <% end %>
+<div class="mb-3">
+    <!-- Commenter Field -->
+    <%= form.label :commenter, "Name", class: "form-label" %>
+    <%= form.text_field :commenter, class: "form-control" %>
+  </div>
+
+  <div class="mb-3">
+    <!-- Comment Body Field -->
+    <%= form.label :body, "Comment",class: "form-label" %>
+    <%= form.text_area :body, class: "form-control", rows: 4 %>
+  </div>
+
+  <div class="mb-3">
+    <!-- Status Field -->
+    <%= form.label :status, class: "form-label" %>
+    <%= form.select :status, Visible::VALID_STATUSES, { selected: 'public' }, class: "form-select" %>
+  </div>
+
+  <div>
+    <!-- Submit Button -->
+    <%= form.submit "Post Comment", class: "btn btn-primary" %>
+  </div>
+<% end %>
   
