--- a/ruby/classwork/blog/app/views/articles/index.html.erb
+++ b/ruby/classwork/blog/app/views/articles/index.html.erb
@@ -1,18 +1,46 @@
-<h1>Articles</h1>
+<p style="color: green"><%= notice %></p>
 
-Our blog has <%= Article.public_count %> articles and counting!
+<div class="container">
+  <div class="bg-light py-5 mb-4">
+    <div class="container-fluid">
+      <h1 class="display-4">Articles</h1>
+      <p class="lead">Click on an article to read more or create a new one.</p>
+      <hr class="my-4">
+      <p class="lead">Our blog has <%= Article.public_count %> articles and counting!</p>
+      <p>
+        <%= link_to "Create a New Article", new_article_path, class: "btn btn-primary btn-lg" %>
+      </p>
+    </div>
+  </div>
 
-<ul>
+  <!-- Display articles in a grid layout -->
+  <div class="row">
   <% @articles.each do |article| %>
     <% unless article.archived? %>
-      <li>
-        <%= link_to article.title, article %> 
-        <% if article.author %> 
-          Author: <%= article.author.name %> - <%= article.author.bio %> 
-        <% end %>
-      </li>
+      <div class="col-md-4 mb-4">
+        <!-- Card with d-flex and flex-column for equal height -->
+        <div class="card d-flex flex-column h-100">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">
+              <%= content_tag :span, article.title, class: "text-decoration-none" %>
+              <% if article.category %>
+                <%= content_tag :span, article.category.name, class: "float-end text-muted small" %>
+              <% end %>
+            </h5>
+            <% if article.author %>
+              <p class="card-text">
+                <strong>Author:</strong> <%= article.author.name %>
+                <br>
+                <strong>Bio:</strong> <%= truncate(article.author.bio, length: 100) %> 
+              </p>
+            <% end %>
+            <!-- Read more button positioned at the bottom -->
+            <div class="mt-auto">
+              <%= link_to "Read More", article_path(article), class: "btn btn-light" %>
+            </div>
+          </div>
+        </div>
+      </div>
     <% end %>
   <% end %>
-</ul>
-
-<%= link_to "New Article", new_article_path, class: "new-article-link" %>
+</div>
