--- a/ruby/classwork/blog/app/views/articles/show.html.erb
+++ b/ruby/classwork/blog/app/views/articles/show.html.erb
@@ -1,16 +1,46 @@
-<h1><%= @article.title %></h1>
+<div class="container col-md">
+  <!-- Article Title -->
+  <div class="row">
+    <div class="col-12">
+      <h1 class="display-4 text-center"><%= @article.title %></h1>
+    </div>
+  </div>
 
-<p><%= @article.body %></p>
+  <!-- Article Body -->
+  <div class="row">
+    <div class="col-12">
+      <p class="lead"><%= @article.body %></p>
+    </div>
+  </div>
 
-<%= link_to "Edit", edit_article_path(@article) %> | 
-<%= link_to "Delete", article_path(@article), data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %>
+  <!-- Edit/Delete Buttons -->
+  <div class="row mt-3">
+    <div class="col-12 text-center">
+      <%= link_to "Edit", edit_article_path(@article), class: "btn btn-secondary btn-sm mx-1" %> 
+      <%= link_to "Delete Article", article_path(@article), class: "btn btn-danger btn-sm mx-1", data: { 
+                        turbo_method: :delete,
+                        turbo_confirm: "Are you sure?"
+                      } %>
+    </div>
+  </div>
 
+<br>
+<br>
 
-<h2>Comments</h2>
-<%= render @article.comments %>
+  <div class="row">
+    <!-- Comments -->
+    <div class="col-md-6">
+      <h2>Comments</h2>
+      <%= render @article.comments %>
+    </div>
 
-<h2>Add a comment:</h2>
-<%= render "comments/form", article: @article %>
+    <!-- Leave a Comment -->
+    
+    <div class="col-md-6">
+    <div class="leave-comment">
+      <h2>Leave a comment:</h2>
+          <%= render "comments/form", article: @article %>
+    </div>
+    </div>
+</div>
+</div>
