--- a/ruby/classwork/blog/app/views/authors/index.html.erb
+++ b/ruby/classwork/blog/app/views/authors/index.html.erb
@@ -1,16 +1,42 @@
 <p style="color: green"><%= notice %></p>
 
-<% content_for :title, "Authors" %>
+<div class="container">
+  <div class="bg-light py-5 mb-4">
+    <div class="container-fluid">
+      <h1 class="display-4">Authors</h1>
+      <p class="lead">Click on an author to read more about them or create a new one.</p>
+      <hr class="my-4">
+      <p class="lead">Our blog has <%= @authors.count %> authors and counting!</p>
+      <p>
+        <%= link_to "Create a New Author", new_author_path, class: "btn btn-primary btn-lg" %>
+      </p>
+    </div>
+  </div>
 
-<h1>Authors</h1>
+  <!-- Display authors in a grid layout -->
+  <div class="row">
+    <% @authors.each do |author| %>
+      <div class="col-md-4 mb-4">
+        <!-- Card with d-flex and flex-column for equal height -->
+        <div class="card d-flex flex-column h-100">
+          <!-- Author Image -->
+         <img src="https://via.placeholder.com/220" class="card-img-top" alt="<%= author.name %>">
 
-<div id="authors">
-  <% @authors.each do |author| %>
-    <%= render author %>
-    <p>
-      <%= link_to "Show this author", author %>
-    </p>
-  <% end %>
+          <!-- Card Body -->
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">
+              <%= content_tag :span, author.name, class: "text-decoration-none" %>
+            </h5>
+            <p class="card-text">
+              <strong>Bio:</strong> <%= truncate(author.bio, length: 100) %>
+            </p>
+            <!-- Read more button positioned at the bottom -->
+            <div class="mt-auto">
+              <%= link_to "Read more", author_path(author), class: "btn btn-light" %>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
-
-<%= link_to "New author", new_author_path %>
