--- a/ruby/classwork/blog/app/views/categories/_form.html.erb
+++ b/ruby/classwork/blog/app/views/categories/_form.html.erb
@@ -1,17 +1,25 @@
-<h1>New Category</h1>
-
 <%= form_with model: @category do |form| %>
-  <div>
-    <%= form.label :name %><br>
-    <%= form.text_field :name %>
-  </div>
+  <!-- Name Field -->
+ <div class="mb-3">
+      <%= form.label :name, class: "form-label" %>
+      <%= form.text_field :name, class: "form-control" %>
+      <% @category.errors.full_messages_for(:name).each do |message| %>
+        <div class="text-danger"><%= message %></div>
+      <% end %>
+    </div>
 
-  <div>
-    <%= form.label :description %><br>
-    <%= form.textarea :description %>
-  </div>
+    <!-- Description Field -->
+    <div class="mb-3">
+      <%= form.label :description, class: "form-label" %>
+      <%= form.text_area :description, class: "form-control", rows: 5 %>
+      <% @category.errors.full_messages_for(:description).each do |message| %>
+        <div class="text-danger"><%= message %></div>
+      <% end %>
+    </div>
 
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+    <!-- Submit Button -->
+    <div class="mb-3">
+      <%= form.submit "Create Category", class: "btn btn-primary" %>
+    </div>
+  <% end %>
+</div>
