--- a/ruby/classwork/blog/app/views/categories/index.html.erb
+++ b/ruby/classwork/blog/app/views/categories/index.html.erb
@@ -1,4 +1,20 @@
-<h1>Categories</h1>
+
+<p style="color: green"><%= notice %></p>
+
+<div class="container">
+
+<div class="bg-light py-5 mb-4">
+  <div class="container-fluid">
+    <h1 class="display-4">Categories</h1>
+    <p class="lead">Click on a category to see all related articles or create a new one.</p>
+    <hr class="my-4">
+    <p>
+      <%= link_to "Create a New Category", new_category_path, class: "btn btn-primary btn-lg" %>
+    </p>
+  </div>
+  </div>
+
+
 
 <ul class="list-group">
   <% @categories.each do |category| %>
@@ -10,7 +26,7 @@
     </li>
   <% end %>
 </ul>
-
+</div>
 
 
 
