More Bootstrap Styling in Categories, Authors

--- a/ruby/classwork/blog/app/views/categories/index.html.erb
+++ b/ruby/classwork/blog/app/views/categories/index.html.erb
@@ -18,8 +18,8 @@
 
 <ul class="list-group">
   <% @categories.each do |category| %>
-    <li class="list-group-item d-flex justify-content-between align-items-center">
-      <%= link_to "#{category.name}", category %>
+    <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+      <%= link_to "#{category.name}", category, class: "text-decoration-none" %>
       <span class="badge bg-primary rounded-pill">
         <%= category.articles.count %>
       </span>
