--- a/ruby/classwork/blog/app/views/authors/index.html.erb
+++ b/ruby/classwork/blog/app/views/authors/index.html.erb
@@ -15,28 +15,30 @@
 
   <!-- Display authors in a grid layout -->
   <div class="row">
-    <% @authors.each do |author| %>
-      <div class="col-md-4 mb-4">
-        <!-- Card with d-flex and flex-column for equal height -->
-        <div class="card d-flex flex-column h-100">
-          <!-- Author Image -->
-         <img src="https://via.placeholder.com/220" class="card-img-top" alt="<%= author.name %>">
-
-          <!-- Card Body -->
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">
-              <%= content_tag :span, author.name, class: "text-decoration-none" %>
-            </h5>
-            <p class="card-text">
-              <strong>Bio:</strong> <%= truncate(author.bio, length: 100) %>
-            </p>
-            <!-- Read more button positioned at the bottom -->
-            <div class="mt-auto">
-              <%= link_to "Read more", author_path(author), class: "btn btn-light" %>
+  <% @authors.each do |author| %>
+    <div class="col-md-4 mb-4">
+      <!-- Card with fixed width and responsive design -->
+      <div class="card h-100 d-flex flex-column">
+        <div class="row g-0 h-100">
+          <div class="col-md-4">
+            <img src="https://via.placeholder.com/220" class="img-fluid rounded-start" alt="<%= author.name %>">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">
+                <!-- Link to author show page -->
+                <%= link_to author.name, author_path(author), class: "text-decoration-none" %>
+              </h5>
+              <p class="card-text"><%= truncate(author.bio, length: 100) %></p>
+              <div class="mt-auto">
+                <%= link_to "Read more", author_path(author), class: "btn btn-light" %>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
 </div>
+</div>
+
