--- a/ruby/classwork/blog/app/views/authors/new.html.erb
+++ b/ruby/classwork/blog/app/views/authors/new.html.erb
@@ -1,4 +1,5 @@
-<% content_for :title, "New author" %>
+<div class="container">
+<% content_for :title, "New Author" %>
 
 <h1>New author</h1>
 
@@ -8,4 +9,6 @@
 
 <div>
   <%= link_to "Back to authors", authors_path %>
+</div>
+
 </div>
