--- a/ruby/classwork/blog/app/views/articles/_form.html.erb
+++ b/ruby/classwork/blog/app/views/articles/_form.html.erb
@@ -1,8 +1,5 @@
-
-<p style="color: green"><%= notice %></p>
-
 <div class="container">
-<%= form_with model: article do |form| %>
+<%= form_with(model: article) do |form| %>
   
     <!-- Title Field -->
   <div class="mb-3">
@@ -45,4 +42,5 @@
     <%= form.submit "Submit", class: "btn btn-primary" %>
   </div>
 <% end %>
+
 </div>
