--- a/ruby/classwork/blog/app/views/authors/_form.html.erb
+++ b/ruby/classwork/blog/app/views/authors/_form.html.erb
@@ -1,27 +1,22 @@
-<%= form_with(model: author) do |form| %>
-  <% if author.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(author.errors.count, "error") %> prohibited this author from being saved:</h2>
+<%= form_with model: @author do |form| %>
+    <div class="mb-3">
+    <%= form.label :name, style: "display: block", class: "form-label" %>
+    <%= form.text_field :name, class: "form-control" %>
+  </div>
 
-      <ul>
-        <% author.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+  <div class="mb-3">
+    <%= form.label :bio, style: "display: block", class: "form-label" %>
+    <%= form.textarea :bio,  class: "form-control" %> 
+  </div>
+
+  <div class="mb-3">
+  <div class="field">
+  <%= form.label :image, class: "form-label"  %>
+  <%= form.file_field :image, class: "form-control" %>
+</div>
+</div>
+
+<div class="mb-3">
+      <%= form.submit "Create Author", class: "btn btn-primary" %>
     </div>
-  <% end %>
-
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div>
-    <%= form.label :bio, style: "display: block" %>
-    <%= form.textarea :bio %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
 <% end %>
