--- a/ruby/classwork/blog/app/views/authors/edit.html.erb
+++ b/ruby/classwork/blog/app/views/authors/edit.html.erb
@@ -1,4 +1,5 @@
-<% content_for :title, "Editing author" %>
+<div class="container">
+<% content_for :title, "Edit Author" %>
 
 <h1>Editing author</h1>
 
@@ -9,4 +10,6 @@
 <div>
   <%= link_to "Show this author", @author %> |
   <%= link_to "Back to authors", authors_path %>
+</div>
+
 </div>
