--- a/ruby/classwork/blog/app/views/pages/home.html.erb
+++ b/ruby/classwork/blog/app/views/pages/home.html.erb
@@ -3,9 +3,10 @@
 <div class="bg-light py-5 mb-4">
 <div class="container-fluid">
   <h1 class="display-4">Welcome to Nadia's Blog!</h1>
-  <p class="lead">Explore articles, categories, and authors to stay informed and connected.</p>
+  <p class="lead">Explore articles, categories, and authors to learn more about my interests.</p>
   <hr class="my-4">
   
+  <img src="https://images.pexels.com/photos/2739666/pexels-photo-2739666.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-fluid d-block mx-auto">
 </div>
 </div>
 </div>
